@@ -4,6 +4,7 @@
 * Applied [#10636] Added spec for OptionParser in Runner (Patch from Scott Taylor)
 * Added [#10516] should_include should be able to accept multiple items
 * Applied [#10631] redirect_to matcher doesn't respect request.host (Patch from Tim Lucas)
+* Each formatter now flushes their own IO. This is to avoid buffering of output.
 
 == Version 0.9.3
 This is a bugfix release.
